# StorySparkAIAgent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
agents/: NovelAgent.py
agents/models/: gemini.py  ollama_client.py  openai_client.py
config/: config.py
output/20251108_150402/: novel_state.json  test_output.aux  test_output.tex
output/20251112_194730/: novel.tex  novel_state.json  novel_state.json.backup
schemas/: state_schemas.py  story_schemas.py
storyspark_logging/: __init__.py
storyspark_logging/config/: __init__.py  log_levels.json  logging_config.json
storyspark_logging/core/: __init__.py  error_enhancer.py  logger_factory.py  performance_tracker.py
storyspark_logging/formatters/: __init__.py  console_formatter.py  json_formatter.py  verbose_formatter.py
storyspark_logging/handlers/: __init__.py  console_handler.py  file_handler.py
templates/: main.tex
tools/: image_generation.py  pdf_generator.py  state_tool.py  story_tool.py
utils/: directory_utils.py  timestamp_utils.py
